updated to work with go-fetch v2

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "request",
     "fetch"
   ],
-  "version": "1.0.0",
+  "version": "2.0.0",
   "repository": {
     "type": "git",
     "url": "git@github.com:go-fetch-js/body-parser.git"
@@ -23,11 +23,12 @@
     "url": "https://github.com/go-fetch-js/body-parser/issues"
   },
   "devDependencies": {
-    "go-fetch": "^1.2.0",
+    "go-fetch": "^2.0.0",
+    "go-fetch-content-type": "^0.1.0",
     "string-to-stream": "^1.0.0"
   },
   "peerDependencies": {
-    "go-fetch": "^1.2.0"
+    "go-fetch": "^2.0.0"
   },
   "scripts": {
     "test": "mocha"
